--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 :root {
   --red: #BE3144;
   --black : #303841;
+  --blue: #45567D;
 }
 
 
@@ -37,14 +38,13 @@ nav {
   top: 0;
   background-color: var(--red);
   text-align: right;
-  padding: 1.5rem;
+  
   border-bottom: 1px solid black; 
 }
 
 .navbar__menu {
   display: flex;
  justify-content: flex-end;
- gap: 32px;
  font-size: 1.25rem;
 }
 
@@ -53,9 +53,18 @@ a {
   color: white;
 }
 
+.navbar__menu > li {
+  padding: 1.5rem;
+  height:100%;
+}
+
+.navbar__menu > li:hover {
+  background-color: var(--blue);
+}
+
 section {
   min-height: 100vh;
-    display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -77,7 +86,7 @@ h1 {
 }
 
 #projects {
-  background-color: #45567D;
+  background-color: var(--blue);
   width: 100%;
 }
 
@@ -92,12 +101,14 @@ h1 {
 .project-tile {
   min-width: 33%;
   max-width: 550px;
-  height: auto;
+  
 }
 
-.tile__image {
+img {
   width: 100%;
+  height: 75%;
 }
+
 .tile__title {
   text-align: center;
   padding: 16px;
@@ -137,6 +148,14 @@ a:hover > .tile__title span {
   font-size: 1.5rem;
 }
 
+.socials > li {
+  transition: transform 1s;
+}
+
+.socials > li:hover {
+  transform: translateY(16px)
+}
+
 .socials i {
   margin-right: 8px;
 }
@@ -147,16 +166,9 @@ footer {
   padding: 48px;
 }
 
-
 @media (max-width: 600px) {
 .project__tile {
   min-width: 320px;
   max-width: 100%;
 }
-
 }
-
-
-
-
-
