--- a/styles.css
+++ b/styles.css
@@ -98,15 +98,21 @@ h1 {
   gap: 2rem;
 }
 
+#projects h2 {
+  font-size: 2rem;
+  text-decoration: underline;
+}
+
 .project-tile {
   min-width: 33%;
-  max-width: 550px;
+  max-width: 350px;
   
 }
 
 img {
   width: 100%;
   height: 75%;
+  object-fit: cover;
 }
 
 .tile__title {
